gl51-master/src/test/deca/context/invalid/testObject_rule3_33Neg.deca
//Description

class A {}
{
    A a = new A();
    if(a != true){} //error
}
//passed
